[metadata]
name = wasupu-walker
version = 0.0.1+BUILDMETADATA
author = R.A.A
author-email = rai22474@gmail.com
summary = wasupu walker
description-file = file: README.md
description-content-type = text/x-rst; charset=UTF-8
license = Apache-2
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    ev3, robotics

[options]
packages = find:
install_requires =
    python-ev3dev2 == 2.0.0b3

tests_require =

[options.packages.find]
exclude = tests, tests.*

[tool:pytest]
testpaths = tests
python_files = *_test.py
python_functions = it_should_*
junit_suite_name = unit_tests
